# Burwell

./: .gitignore  CMakeLists.txt  LOGGING_MIGRATION_TODO.md  README.md  build.sh  convert_logging.py  test_raii_wrappers.cpp  test_script_fix  test_script_fix.cpp  toolchain-mingw.cmake
config/: burwell.json
config/cpl/: commands.json
config/llm_providers/: local.json  openai.json  openrouter.json  together_ai.json
docs/: FINAL_ARCHITECTURE.md  UML_DIAGRAMS.md  api_reference.md  coding_standards.md  developer_guide.md  user_guide.md
service/: CMakeLists.txt  README.md  build_service.sh  burwell_service_cli.cpp  service_manager.cpp  service_manager.h
src/: main.cpp  test_dependency_injection.cpp  test_threading.cpp
src/command_parser/: CMakeLists.txt  command_parser.cpp  command_parser.h
src/common/: CMakeLists.txt  config_manager.cpp  config_manager.h  credential_manager.cpp  credential_manager.h  dependency_injection.h  error_handler.cpp  error_handler.h  file_utils.cpp  file_utils.h  input_validator.cpp  input_validator.h  json_utils.cpp  json_utils.h  logger_raii.cpp  os_utils.cpp  os_utils.h  raii_wrappers.h  resource_monitor.cpp  resource_monitor.h  service_factory.cpp  service_factory.h  shutdown_manager.h  string_utils.cpp  string_utils.h  structured_logger.cpp  structured_logger.h  thread_pool.cpp  thread_pool.h  thread_safe_queue.h  types.h
src/cpl/: CMakeLists.txt  command_library.h  cpl_config_loader.cpp  cpl_config_loader.h  cpl_executor.h  cpl_parser.h  external_config_loader.h  llm_adapter.h
src/environmental_perception/: CMakeLists.txt  environmental_perception.cpp  environmental_perception.h
src/llm_connector/: CMakeLists.txt  connection_pool.h  http_client.cpp  http_client.h  llm_connector.cpp  llm_connector.h
src/ocal/: CMakeLists.txt  application_automation.cpp  application_automation.h  file_operations.cpp  file_operations.h  filesystem_operations.cpp  filesystem_operations.h  input_operations.cpp  input_operations.h  keyboard_control.cpp  keyboard_control.h  mouse_control.cpp  mouse_control.h  ocal.cpp  ocal.h  process_operations.cpp  process_operations.h  service_management.cpp  service_management.h  system_command.cpp  system_command.h  window_management.cpp  window_management.h  window_management_raii.cpp  window_operations.cpp  window_operations.h
src/orchestrator/: CMakeLists.txt  conversation_manager.cpp  conversation_manager.h  event_manager.cpp  event_manager.h  execution_engine.cpp  execution_engine.h  feedback_controller.cpp  feedback_controller.h  istate_manager.h  orchestrator.cpp  orchestrator.h  orchestrator_facade.cpp  orchestrator_facade.h  orchestrator_old.cpp  script_manager.cpp  script_manager.h  state_manager.cpp  state_manager.h  state_manager_thread_safe.cpp  state_manager_thread_safe.h
src/task_engine/: CMakeLists.txt  task_engine.cpp  task_engine.h
src/ui_module/: CMakeLists.txt  ui_module.cpp  ui_module.h
test/: test_structured_logger.cpp
test_scripts/: check_deepseek_response.json  check_deepseek_status.json  check_if_deepseek_found.json  chrome_extensions_test.json  comprehensive_deepseek_test.json  comprehensive_firefox_search.json  comprehensive_firefox_search_fixed.json  comprehensive_firefox_search_proper.json  comprehensive_tab_search_improved.json  comprehensive_tab_search_with_loops.json  conditional_script_execution.json  cycle_and_check_tab.json  cycle_firefox_tabs.json  cycle_firefox_tabs_clean.json  cycle_firefox_tabs_efficient.json  cycle_firefox_tabs_with_conditional.json  cycle_tabs_until_start.json  cycle_tabs_until_start_iterative.json  debug_minimal_nested.json  debug_simple_execute.json  debug_simple_wait.json  debug_variables.json  debug_without_logs.json  deepseek_automation_fixed.json  deepseek_automation_simple.json  deepseek_test_fixed.json  deepseek_test_simple.json  deepseek_test_with_loops.json  deepseek_web_automation_test.json  deepseek_working.json  emergency_close_notepad.json  find_deepseek_firefox.json  find_deepseek_firefox_fixed.json  find_deepseek_firefox_workaround.json  find_deepseek_tab.json  find_deepseek_tab_fixed.json  find_firefox_windows_manual.json  firefox_automation_test.json  firefox_tab_cycle_proper.json  minimize_all_windows_direct.json  (+83 more)
